# backup_sync

./: .gitignore  Cargo.toml  README.md  TEST_SUDO.sh
benchmarks/: README.md  make_move_bench.sh  run_move_bench.sh  usb_transfer.rs
benchmarks/results/: 1GiB_USB_results.csv  3GiB_copy_parallel_results.csv  4GiB_parallel_results.csv
docs/: archived-plan-rsync-orchestration.md  theory.md
src/: apply.rs  artifacts.rs  cli.rs  conclusions.rs  device.rs  diff.rs  durability.rs  hash.rs  lib.rs  links.rs  lock.rs  main.rs  manifest.rs  parallel.rs  plan.rs  preflight.rs  progress.rs  progress_update.rs  report.rs  scan.rs  target.rs  tests.rs  units.rs
src/reports/: conclusions.rs  diff_cmd.rs  errors.rs  findings.rs  mod.rs  showstoppers.rs  sync_cmd.rs
src/runtime/: elevation.rs  interrupt.rs  lock.rs  mod.rs
tests/: diff.rs  plan.rs  run.rs  scan.rs  sudo_elevation.rs  sync.rs
tests/common/: mod.rs
