[package]
name = "filesync"
version = "0.1.0"
edition = "2021"
description = "Cheaply and reliably mirror one directory onto another"

[dependencies]
blake3 = "1.8.2"
walkdir = "2.5.0"
clap = { version = "4.5.53", features = ["derive"] }
rayon = "1.11.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2" # posix_fadvise(DONTNEED) for cold-read verification

[dev-dependencies]
tempfile = "3"
indicatif = "0.17" # used by the usb_transfer benchmark

# Removable-device transfer benchmark (WRITE / CHECKSUM / COPY, with fsync & verify variants).
# Custom harness so it takes subcommands and can be run phase-by-phase to defeat the page cache.
#   cargo bench --bench usb_transfer -- all <driveA> <driveB>
[[bench]]
name = "usb_transfer"
path = "benchmarks/usb_transfer.rs"
harness = false
