[package]
name = "filesync"
version = "0.1.0"
edition = "2021"
description = "Cheaply and reliably mirror one directory onto another"

[dependencies]
blake3 = "1.8.2"
walkdir = "2.5.0"
clap = { version = "4.5.53", features = ["derive"] }
indicatif = "0.17" # sync progress bar (auto-hides when stderr isn't a terminal)

[target.'cfg(unix)'.dependencies]
libc = "0.2" # posix_fadvise(DONTNEED) for cold-read verification; syncfs durability barrier

[dev-dependencies]
tempfile = "3"
rayon = "1.11.0" # worker-pool sweeps in the usb_transfer benchmark (prod code is sequential)

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2" # mkfifo(), to build a Kind::Other special file in tests

# Removable-device transfer benchmark (WRITE / CHECKSUM / COPY, with fsync & verify variants).
# Custom harness so it takes subcommands and can be run phase-by-phase to defeat the page cache.
#   cargo bench --bench usb_transfer -- all <driveA> <driveB>
[[bench]]
name = "usb_transfer"
path = "benchmarks/usb_transfer.rs"
harness = false
